test/fail/integration/_fail_grammar_expr_mod_1.hs
x :: Int
x = mod jl 4
main = print "hello"